[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mqute"
version = "0.1.0"
authors = [
    { name = "Ali Naderi Parizi", email = "me@alinaderiparizi.com" },
]
description = "Elegant MQTT apps, the cute way."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mralinp/mqute"
"Bug Tracker" = "https://github.com/mralinp/mqute/issues" 